--- a/src/app/pages/dashboard/create-products/create-products.component.html
+++ b/src/app/pages/dashboard/create-products/create-products.component.html
@@ -1,1 +1,47 @@
-<p>create-products works!</p>
+<form [formGroup]="form">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="mb-3">
+          <label for="name" class="form-label">name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            formControlName="name"
+          />
+          <div class="text-danger" *ngIf="name.errors && name.touched">Invalid Name</div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="mb-3">
+          <label for="description" class="form-label">description</label>
+          <input
+            type="text"
+            class="form-control"
+            id="description"
+            formControlName="description"
+          />
+          <div class="text-danger" *ngIf="description.errors && description.touched">Invalid Name</div>
+        </div>
+      </div>
+
+      <div class="col-12">
+        <div class="mb-3">
+          <label for="price" class="form-label">price</label>
+          <input
+            type="number"
+            class="form-control"
+            id="price"
+            formControlName="price"
+          />
+          <div class="text-danger" *ngIf="price.errors && price.touched">Invalid Name</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary" (click)="submit()">
+    Submit
+  </button>
+</form>
