--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,44 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section class="container">
-      <button class="btn btn-outline-success">Create</button>
-        <div class="col-lg-12 col-md-12 col-sm-8">
-            <table id="products" class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">P_ID</th>
-                    <th scope="col">P_NAME</th>
-                    <th scope="col">DESCRIPTION</th>
-                    <th scope="col">PRICE</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>12000</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>30000</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>600000</td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
-    </section>
-</body>
-</html>
+<button type="button" class="btn btn-success" routerLink="create-products">create</button>
+  <body>
+    <div class="container">
+      <table>
+        <tr>
+          <th>NAME</th>
+          <th>PHONE NO</th>
+          <th>SEC</th>
+          <th>ROLL NO</th>
+          <th>EDIT</th>
+        </tr>
+        <tr id="1" *ngFor="let pd of data">
+          <td>{{pd.name}}</td>
+          <td>{{pd.phone}}</td>
+          <td>{{pd.sec}}</td>
+          <td>{{pd.roll}}</td>
+          <td><svg style="margin:10px"xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+            <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+          </svg ></td>
+        </tr>
+      </table>
+    </div>
+
+  </body>
+
