--- a/src/app/pages/dashboard/create-products/create-products.component.html
+++ b/src/app/pages/dashboard/create-products/create-products.component.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary" (click)="submit()">
+  <button type="submit" class="btn btn-primary ms-5" (click)="submit()" routerLink="">
     Submit
   </button>
 </form>
